# Greencard-Photo-Validator

./: .gitignore  README.md  main.py  main_window_ui.py  mainwindow.ui  params.py  pyproject.toml
detector/: background.py  head_rotation_and_tilt.py  shadow.py  video_rotation_tilt.py
